# cookie-cutter-research-project

./: .gitignore  LICENSE  README.md  ccenv.yml  config.yaml  cookiecutter.json  logo.py
cleaned/: ts_data.csv
latex/paper/: Preamble.tex  aea.bst  drafttex.tex
latex/slides/: slides.tex
output/: DFM_model.tex  df_irfs.eps  fcasts.eps
src/: analysis.py  create_clean_data.py  download_raw_data.py  master.py  utilities.py
{{ cookiecutter.repo_name }}/: .env  .gitignore  Makefile  project_config.toml  pyproject.toml
{{ cookiecutter.repo_name }}/paper/: paper.qmd
{{ cookiecutter.repo_name }}/paper/_extensions/mikemahoney218/arxiv/: arxiv.sty  orcidlink.sty
{{ cookiecutter.repo_name }}/paper/_extensions/mikemahoney218/arxiv/partials/: _authors.tex  before-body.tex  title.tex
{{ cookiecutter.repo_name }}/references/: chicago-author-date.csl  references.bib
{{ cookiecutter.repo_name }}/slides/: slides.qmd
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: {{ cookiecutter.repo_name }}.py
{{ cookiercutter.repo_name }}/: README.md  pyproject.toml
{{ cookiercutter.repo_name }}/paper/: paper.qmd
{{ cookiercutter.repo_name }}/paper/_extensions/mikemahoney218/arxiv/: _extension.yml  arxiv.sty
{{ cookiercutter.repo_name }}/paper/_extensions/mikemahoney218/arxiv/partials/: before-body.tex  title.tex
{{ cookiercutter.repo_name }}/references/: chicago-author-date.csl  references.bib
{{ cookiercutter.repo_name }}/slides/: slides.qmd
{{ cookiercutter.repo_name }}/slides/_extensions/grantmcdermott/clean/: clean.scss
