[project]
name = {{ cookiecutter.repo_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
readme = "README.md"
authors = [
  { name = {{ cookiecutter.author_name|tojson }} },
]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: {{ cookiecutter.python_version_number }}",
]
requires-python = "=={{ cookiecutter.python_version_number }}"
dependencies = [
    "ipywidgets>=8.1.5",
    "ipykernel>=6.29.5",
    "nbstripout>=0.8.1",
    "pre-commit-hooks>=5.0.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
    "toml>=0.10.2",
    "loguru>=0.7.2",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
